--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
 </head>
 <body>
 
-<h1>[あなたの部活動名] 出欠管理</h1>
+<h1>[吹奏楽部] 出欠管理</h1>
 
 <div id="instrumentSection">
     <h2>楽器を選択してください</h2>
